# power_pizza_rebot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml  docker-entrypoint.sh
src/: bot.rs  build.rs  config.rs  db.rs  download.rs  import.rs  lib.rs  main.rs  serde.rs  status.rs
src/bot/: bin.rs  error.rs  mod.rs  search.rs  strings.rs  user.rs
src/spreaker/: downloader.rs  episode.rs  error.rs  mod.rs  paginator.rs  simple_episode.rs
src/transcript/: bin.rs  data.rs  jobs.rs  mod.rs
whisper.cpp/: Dockerfile
