[package]
name = "power_pizza_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
tokio = { version = "^1.39", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "^0.12.5", features = ["json"] }
serde = { version = "^1.0.0" }

[[bin]]
name = "ppp_build"
path = "src/build.rs"

