[package]
name = "power_pizza_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13", features = ["macros"] }
log = "0.4"
tokio = { version = "^1.39", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.16" }
reqwest = { version = "^0.12.5", features = ["json"] }
serde = { version = "^1.0.0" }
serde_json = "1.0.128"
pretty_env_logger = "0.5.0"

[[bin]]
name = "ppp_build"
path = "src/build.rs"

